--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"wrangler": "^2.0.23"
 	},
 	"scripts": {
-		"start": "wrangler dev src/index.ts --local",
+		"start": "wrangler dev src/index.ts",
 		"deploy": "wrangler publish src/index.ts",
 		"start-stackblitz": "WRANGLER_SEND_METRICS=false wrangler dev src/index.ts --local"
 	}
